# Tabernacle-de-la-Moisson-ERP-Premium-v1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: allow-api-request.toml
apps/desktop/src-tauri/resources/config/: env.template
apps/desktop/src-tauri/resources/scripts/: Export-Portable.cmd  Import-Portable.ps1  Stop-Tabernacle.cmd  stop-tabernacle.ps1
apps/desktop/src-tauri/src/: lib.rs  main.rs
config/: .env  env.example
data/: tabernacle-finance.sqlite-shm  tabernacle-finance.sqlite-wal
deploy/: .env.example  Caddyfile  README.md  backup.sh  install-vm.sh
docs/: 01-architecture-overview.md  02-finance-bounded-context.md  03-finance-rbac-permissions-audit.md  04-db-schema-finance-sqlite.md  05-finance-use-cases-flux-metiers.md  06-finance-ui-screens.md  07-sync-backup-architecture.md  08-api-future-contract.md  09-saas-multi-tenant-ready.md  10-deploy-vm-en-ligne.md
installer/: README.md  RELEASE-v1.6.1.md  RELEASE-v1.6.2.md  RELEASE-v1.6.3.md  RELEASE-v1.6.4.md  RELEASE-v1.6.5.md  RELEASE-v1.6.6.md  TabernacleERP.iss  build-icon.ps1  build-windows.ps1  release-notes-v1.5.1.md  release-notes-v1.5.2.md  release-notes-v1.5.3.md  release-notes-v1.5.4.md  release-notes-v1.5.5.md
scripts/: backup-donnees.ps1  ci-smoke.mjs  dev.mjs  fix-exchange-rates.mjs  init-donnees-externes.ps1  (+15 more)
(+116 files in other folders)
