[package]
name = "tabernacle-erp"
version = "1.3.1"
description = "Tabernacle de la Moisson ERP Premium"
authors = ["Tabernacle de la Moisson"]
edition = "2021"

[lib]
name = "tabernacle_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
