[package]
name = "tabernacle-erp"
version = "1.6.2"
description = "Tabernacle de la Moisson ERP Premium"
authors = ["Tabernacle de la Moisson"]
edition = "2021"

[lib]
name = "tabernacle_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "s"
strip = true
